--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -104,9 +104,9 @@ jobs:
 
       # On push to "master", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform destroy
+    - name: Terraform apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform destroy -auto-approve -input=false -lock=false
+      run: terraform apply -auto-approve -input=false -lock=false
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         TF_VAR_GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
